Required changes to run image in docker host container

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=redis-app
-server.port=20
+# if the server port is not sat by dockerfile it will be 8080
+server.port=${port:8080}
